Fix #26399 - [Bug] Add locales for becpg-data and bugfix

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/becpg-config-core.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/becpg-config-core.properties
@@ -15,9 +15,8 @@ beCPG.charact.name.format={ml_bcpg:charactName}
 
 #
 # Locales handle by system
-#beCPG.multilinguale.supportedLocales=en,en_US,en_CA,en_AU,de,es,fr,fr_CA,it,ja_JP,nl,ru,zh_CN,pt,no,sv_SE,el,pl,fi,in_ID,zh_HK,th_TH,ms_MY,ko_KR,es_PR,en_IN,zh_SG,ar_AE,ar_BH,ar_SA,ar_QA,ar_OM,ar_KW,ar_DZ,ar_MA,en_KE,en_NG,en_GH,tr,iw_IL,es_CO,pt_MZ,fr_CI,en_MW,bem_ZM,sw_TZ,en_UG,en_ZW,en_PK,sr_RS,ar_EG,ar_TN,en_ZA,es_CL,es_UY,pt_BR,km_KH,my_MM,en_TT,es_DO,es_PE,es_PY,es_PA,es_GT,es_SV
-beCPG.multilinguale.supportedLocales=en,de,es,fr,fr_CA,it,en_US,en_CA,en_AU,ja_JP,nl,ru,ar,zh_CN,pt,pt_BR,no,sv_SE,el,pl,tr,fi
-
+#beCPG.multilinguale.supportedLocales=en,en_US,en_CA,en_AU,de,es,fr,fr_CA,it,ja_JP,nl,ru,zh_CN,pt,no,sv_SE,el,pl,fi,in_ID,zh_HK,th,ms_MY,ko_KR,es_PR,en_IN,zh_SG,ar_AE,ar_BH,ar_SA,ar_QA,ar_OM,ar_KW,ar_DZ,ar_MA,en_KE,en_NG,en_GH,tr,iw_IL,es_CO,pt_MZ,fr_CI,en_MW,bem_ZM,sw_TZ,en_UG,en_ZW,en_PK,sr_RS,ar_EG,ar_TN,en_ZA,es_CL,es_UY,pt_BR,km_KH,my_MM,en_TT,es_DO,es_PE,es_PY,es_PA,es_GT,es_SV
+beCPG.multilinguale.supportedLocales=en,de,es,fr,fr_CA,it,en_US,en_CA,en_AU,ja_JP,nl,ru,ar,zh_CN,pt,pt_BR,no,sv_SE,el,pl,tr,fi,bg,cs_CZ,da_DK,et_EE,hr,lv,lt,hu,ro,sk,sl_SI
 # Disable some mlText fields
 beCPG.multilinguale.disabledMLTextFields=
 
