Fix #27038 - [Feature] Improve IDS service

--- a/becpg-share/src/main/assembly/config/alfresco/messages/common.properties
+++ b/becpg-share/src/main/assembly/config/alfresco/messages/common.properties
@@ -60,7 +60,7 @@ date-format.monthYear        = mmmm yyyy
 date-format.pm               = pm
 #Used server side for RSS feeds (uses Freemarker java.text.SimpleDateFormat syntax)
 date-format.rfc822           = EEE, dd MMM yyyy HH:mm:ss Z
-date-format.shortDate        = dd/mm/yyyy
+date-format.shortDate        = mm/dd/yyyy
 date-format.shortTime        = h:MM TT
 
 date-unit.plural.day    = days
