Fix #27241 - [Feature] Change automatic formulation labeling and filter on where used states

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
@@ -16,13 +16,13 @@ beCPG.datalist.effectiveFilterEnabled.type                     = string
 beCPG.defaultSearchTemplate.description                        = Allows you to set the default search template used by Alfresco
 beCPG.defaultSearchTemplate.readonly                           = true
 beCPG.defaultSearchTemplate.type                               = string
-beCPG.eco.automatic.apply.description                          = Allows you to specify whether the automatic change order should be applied
-beCPG.eco.automatic.deleteOnApply.description                  = Allows you to specify whether change orders should be deleted after being applied
+beCPG.eco.automatic.apply.description                          = If true, and if no automatic formulation, the system plans to apply the automatic change order
+beCPG.eco.automatic.deleteOnApply.description                  = Specifies whether the automatic change order should be deleted after being applied
 beCPG.eco.automatic.enable.description                         = Enables auto wording, auto merge, and auto change order
-beCPG.eco.automatic.record.version.type.description            = Allows you to specify the type of version (MAJOR, MINOR) to create during a change order
-beCPG.eco.automatic.revision.type.description                  = Allows you to specify the revision type of a change order
-beCPG.eco.automatic.states.description                         = Allows you to list the states for which the products are affected by automatic change orders and automatic formulation
-beCPG.eco.automatic.withoutRecord.description                  = Allows you to specify whether changes should not be versioned automatically
+beCPG.eco.automatic.record.version.type.description            = Allows you to specify the type of version (MAJOR, MINOR) to create during the automatic change order
+beCPG.eco.automatic.revision.type.description                  = Allows you to specify the revision type of the automatic change order
+beCPG.eco.automatic.states.description                         = Allows you to list the states for which the products are affected by the automatic change order and automatic formulation
+beCPG.eco.automatic.withoutRecord.description                  = If true, the system plans automatic formulation
 beCPG.entity.report.mltext.fields.description                  = Allows you to list the fields that will be extracted in multilingual
 beCPG.entity.report.mltext.locales.description                 = Allows you to list the languages \u200B\u200Bin which the multilingual fields will be extracted, separated by commas. If empty, all languages \u200B\u200Bwill be taken into account
 beCPG.formulation.costList.keepProductUnit.description         = Allows you to specify whether the product unit should be retained in the cost calculation
@@ -89,16 +89,16 @@ project.extractor.myProjectAttributes.description    = Allows you to list the at
 project.subProject.propsToCopyFromParent.description = Allows you to list the attributes to copy from the parent project to a subproject during formulation
 project.subProject.propsToCopyToParent.description   = Allows you to list the attributes to copy from a subproject to the parent project during formulation
 
-system-configuration.conf-reset                 = Configuration value was reset
-system-configuration.conf-updated               = Configuration value was successfully updated
-system-configuration.reset                      = Rest
-system-configuration.save                       = Save
-system-configuration.section.change-order.title = Change order
-system-configuration.section.export.title       = Export
-system-configuration.section.format.title       = Format
-system-configuration.section.formulation.title  = Formulation
-system-configuration.section.project.title      = Project
-system-configuration.section.report.title       = Report
-system-configuration.section.search.title       = Search
-system-configuration.section.system.title       = System
-system-configuration.title                      = beCPG system configuration
+system-configuration.conf-reset                          = Configuration value was reset
+system-configuration.conf-updated                        = Configuration value was successfully updated
+system-configuration.reset                               = Rest
+system-configuration.save                                = Save
+system-configuration.section.automatic-formulation.title = Automatic formulation
+system-configuration.section.export.title                = Export
+system-configuration.section.format.title                = Format
+system-configuration.section.formulation.title           = Formulation
+system-configuration.section.project.title               = Project
+system-configuration.section.report.title                = Report
+system-configuration.section.search.title                = Search
+system-configuration.section.system.title                = System
+system-configuration.title                               = beCPG system configuration
