--- a/becpg-project/becpg-project-core/pom.xml
+++ b/becpg-project/becpg-project-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.1</version>
 		<relativePath>../../</relativePath>
 	</parent>
- <version>23.4.1.9</version>
+ <version>23.4.1.10-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-project-core</artifactId>
 	<packaging>jar</packaging>
@@ -65,6 +65,6 @@
 	</build>
 
   <scm>
-    <tag>23.4.1.9</tag>
+    <tag>23.4.1.8</tag>
   </scm>
 </project>
