--- a/becpg-share/pom.xml
+++ b/becpg-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>3.2.3</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>3.2.3.7-SNAPSHOT</version>
+    <version>3.2.3.7</version>
     <modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-share</artifactId>
 	<packaging>jar</packaging>
@@ -79,4 +79,8 @@
             </plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <tag>3.2.3.7</tag>
+  </scm>
 </project>
