--- a/becpg-share/pom.xml
+++ b/becpg-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.2.1</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.2.1.46</version>
+    <version>23.2.1.47-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-share</artifactId>
 	<packaging>jar</packaging>
@@ -96,6 +96,6 @@
 	</reporting>
 
   <scm>
-    <tag>23.2.1.46</tag>
+    <tag>23.2.1.44</tag>
   </scm>
 </project>
