--- a/becpg-core/pom.xml
+++ b/becpg-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.2.1</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.2.1.47-SNAPSHOT</version>
+    <version>23.2.1.47</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-core</artifactId>
 	<packaging>jar</packaging>
@@ -116,6 +116,6 @@
 	</build>
 
   <scm>
-    <tag>23.2.1.44</tag>
+    <tag>23.2.1.47</tag>
   </scm>
 </project>
