Fix #27038 - [Bug] Set 'Synchronize with IDS' visible in view and datagrid

--- a/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get.properties
+++ b/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get.properties
@@ -31,6 +31,7 @@ label.info                                  = Info
 label.leaveblank                            = Leave empty if you don't want to change the password
 label.moreuserinfo                          = More about this user
 label.newpassword                           = New Password
+label.no                                    = No
 label.oldpassword                           = Old Password
 label.quota                                 = Quota
 label.removegroup                           = Remove Group
@@ -43,6 +44,7 @@ label.title-view                            = User Profile
 label.uploadStatus                          = Status
 label.usage                                 = Usage
 label.verifypassword                        = Verify Password
+label.yes                                   = Yes
 
 message.authenticationdetails-failure = We couldn't retrieve authentication details.
 message.clear-photo-failure           = We couldn't reset the photo for the user.
