--- a/becpg-designer/becpg-designer-core/pom.xml
+++ b/becpg-designer/becpg-designer-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.1</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>23.4.1.11</version>
+	<version>23.4.1.12-SNAPSHOT</version>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-designer-core</artifactId>
 	<packaging>jar</packaging>
