--- a/becpg-project/becpg-project-core/pom.xml
+++ b/becpg-project/becpg-project-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.2.1</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>23.2.1.48</version>
+	<version>23.2.1.49-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-project-core</artifactId>
 	<packaging>jar</packaging>
@@ -65,6 +65,6 @@
 	</build>
 
   <scm>
-    <tag>23.2.1.48</tag>
+    <tag>23.2.1.44</tag>
   </scm>
 </project>
