--- a/becpg-project/becpg-project-core/pom.xml
+++ b/becpg-project/becpg-project-core/pom.xml
@@ -15,7 +15,7 @@
 	<licenses>
 		<license>
 			<name>GNU LESSER GENERAL PUBLIC LICENSE</name>
-			<url>http://www.gnu.org/licenses/lgpl-3.0.en.html</url>
+			<url>https://www.gnu.org/licenses/lgpl-3.0.en.html</url>
 			<comments>Copyright (C) 2010-2021 beCPG. 
   
 			  beCPG is free software: you can redistribute it and/or modify 
