--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
 	<licenses>
 		<license>
 			<name>GNU LESSER GENERAL PUBLIC LICENSE</name>
-			<url>http://www.gnu.org/licenses/lgpl-3.0.en.html</url>
-			<comments>Copyright (C) 2010-2024 beCPG. 
+			<url>https://www.gnu.org/licenses/lgpl-3.0.en.html</url>
+			<comments>Copyright (C) 2010-2025 beCPG. 
   
 			  beCPG is free software: you can redistribute it and/or modify 
 			  it under the terms of the GNU Lesser General Public License as published by 
@@ -458,22 +458,6 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.owasp</groupId>
-				<artifactId>dependency-check-maven</artifactId>
-				<version>11.1.1</version>
-				<configuration>
-					<skipProvidedScope>false</skipProvidedScope>
-					<skipRuntimeScope>true</skipRuntimeScope>
-					<skipSystemScope>true</skipSystemScope>
-					<skipTestScope>true</skipTestScope>
-					<archiveAnalyzerEnabled>false</archiveAnalyzerEnabled>
-					<failOnError>false</failOnError>
-					<formats>HTML,JSON,XML</formats>
-				</configuration>
-			</plugin>
-
-
-			<plugin>
 				<groupId>org.sonarsource.scanner.maven</groupId>
 				<artifactId>sonar-maven-plugin</artifactId>
 				<version>5.0.0.4389</version>
@@ -506,7 +490,7 @@
 		<module>becpg-plm/becpg-plm-share</module>
 		<module>becpg-integration-runner</module>
 	</modules>
-
+	
 	<reporting>
 		<plugins>
 
@@ -534,7 +518,6 @@
                     </reportSet>
                 </reportSets>
                 <configuration>
-                    <!-- Suppress warnings for missing comments -->
                     <show>private</show>
                     <failOnError>false</failOnError>
                     <additionalJOptions>
