InProgress #26837 - [Feature] Add GS1 fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -40,6 +40,7 @@ gs1_gs1Model.property.gs1_additionalTradeItemClassification1.title              
 gs1_gs1Model.property.gs1_additionalTradeItemClassification2.title                        = Trade item classification 2
 gs1_gs1Model.property.gs1_additionalTradeItemClassificationText1.title                    = Trade item classification description
 gs1_gs1Model.property.gs1_additionalTradeItemClassificationText2.title                    = Trade item classification description 2
+gs1_gs1Model.property.gs1_additionalTradeItemIdentification.title                    	  = Trade item identification
 gs1_gs1Model.property.gs1_alcoholBeverageAge.description                                  = The time period which the alcohol product has been aged. For example, a whiskey aged 12 years
 gs1_gs1Model.property.gs1_alcoholBeverageAge.title                                        = Alcohol beverage age (M)
 gs1_gs1Model.property.gs1_alcoholBeverageDistilledFromCode.description                    = The main ingredient(s) from which the alcohol product has been distilled. Example: Rye, Potato, Sugar Cane.
@@ -76,6 +77,7 @@ gs1_gs1Model.property.gs1_cancelledDateTime.description                         
 gs1_gs1Model.property.gs1_cancelledDateTime.title                                         = Cancelled Date Time
 gs1_gs1Model.property.gs1_catalogId.title                                                 = Identifier catalog
 gs1_gs1Model.property.gs1_catchAreaCode.title                                             = Catch area
+gs1_gs1Model.property.gs1_catchCountryCode.title                                          = Catch country
 gs1_gs1Model.property.gs1_catchMethodCode.title                                           = Catch method
 gs1_gs1Model.property.gs1_certificationCode.title                                         = Certification code
 gs1_gs1Model.property.gs1_cheeseMaturationPeriodDescription.description                   = A descriptive way to specify a date range as some cheeses are matured over a period of time, but not an exact period. For example 3 to 4 weeks, over 1 year etc. The term maturation is also known in other markets as Aged.
@@ -144,8 +146,10 @@ gs1_gs1Model.property.gs1_innerPackPerBox.title                                 
 gs1_gs1Model.property.gs1_innerPackTypeCode.title                                         = Type of packaging
 gs1_gs1Model.property.gs1_innerPackWeight.title                                           = Gross weight inner pack (kg)
 gs1_gs1Model.property.gs1_innerPackWidth.title                                            = Width (mm)
+gs1_gs1Model.property.gs1_isAllergenRelevantDataProvided.title							  = Is allergen relevant data provided?
 gs1_gs1Model.property.gs1_isCaskStrength.description                                      = Indication the alcohol beverage has not been cut, typically with water, after maturation. The resulting product has the same alcohol content as when it was removed from the maturation cask/barrel.
 gs1_gs1Model.property.gs1_isCaskStrength.title                                            = Is Cask Strength?
+gs1_gs1Model.property.gs1_isDangerousSubstance.title                                      = Is there a dangerous substance?
 gs1_gs1Model.property.gs1_isPackagingMarkedReturnable.title                               = Mention "packaging / returnable packaging"
 gs1_gs1Model.property.gs1_isPriceOnPack.title                                             = Price tagged on the packaging
 gs1_gs1Model.property.gs1_isPublicated.title                                              = Publish toward GS1 (yes/no)
@@ -234,6 +238,7 @@ gs1_gs1Model.property.gs1_promotionTypeCode.description                         
 gs1_gs1Model.property.gs1_promotionTypeCode.title                                         = Promotion Type Code
 gs1_gs1Model.property.gs1_provenanceStatement.title                                       = Provenance statement
 gs1_gs1Model.property.gs1_publicationDate.title                                           = Publication date
+gs1_gs1Model.property.gs1_recyclingInstructions.title									  = Recycling instructions
 gs1_gs1Model.property.gs1_referencedTradeItemEanCode.title                                = Referenced trade item GTIN code
 gs1_gs1Model.property.gs1_referencedTradeItemTypeCode.title                               = Referenced trade item type code
 gs1_gs1Model.property.gs1_rennetTypeCode.description                                      = The type of rennet used for coagulation. The enzyme rennet is used for the coagulation of the cheese mass. Rennet and respectively similar enzymes can be gained through various processes.
@@ -272,6 +277,7 @@ gs1_gs1Model.property.gs1_startAvailabilityDateTime.title                       
 gs1_gs1Model.property.gs1_storageStateCode.title                                          = Storage state
 gs1_gs1Model.property.gs1_surfaceOfCheeseAtEndOfRipeningCode.description                  = The representation of whether or not a cheese contains a rind at the end of the maturing process. A Rind is the outside shell of cheese that forms during the cheese making process. Rinds are natural and usually edible, as opposed to other coverings, such as wax and cloth that are inedible.
 gs1_gs1Model.property.gs1_surfaceOfCheeseAtEndOfRipeningCode.title                        = Surface of Cheese at End of Ripening
+gs1_gs1Model.property.gs1_sustainabilityFeatureCode.title                        		  = Sustainability feature
 gs1_gs1Model.property.gs1_sweetnessLevelOfAlcoholicBeverageCode.description               = Indicates the descriptive term that is used by the product manufacturer to identify the sweetness of the alcoholic beverage. These are sometimes placed on a label. In some markets, the term is based on the amount of sugar content according to local regulation.
 gs1_gs1Model.property.gs1_sweetnessLevelOfAlcoholicBeverageCode.title                     = Sweetness Level of Alcoholic Beverage
 gs1_gs1Model.property.gs1_targetMarketCode.title                                          = Code
