InProgress #26837 - [Feature] catchCountryCode locales

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -24,6 +24,7 @@ gs1_gs1Model.aspect.gs1_seasonalAspect.title                                    
 gs1_gs1Model.aspect.gs1_temperatureMeasurementAspect.title                                = Temperature
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.description                      = The type of container used for the alcoholic beverage.
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.title                            = Alcohol beverage containers
+gs1_gs1Model.association.gs1_catchCountryCode.title                                       = Catch country
 gs1_gs1Model.association.gs1_cplProduct.title                                             = Product
 gs1_gs1Model.association.gs1_dutyFeeTaxCountry.description                                = The country that a duty, fee or tax may be applicable to for a trade item.
 gs1_gs1Model.association.gs1_dutyFeeTaxCountry.title                                      = Country
@@ -77,7 +78,6 @@ gs1_gs1Model.property.gs1_cancelledDateTime.description                         
 gs1_gs1Model.property.gs1_cancelledDateTime.title                                         = Cancelled Date Time
 gs1_gs1Model.property.gs1_catalogId.title                                                 = Identifier catalog
 gs1_gs1Model.property.gs1_catchAreaCode.title                                             = Catch area
-gs1_gs1Model.property.gs1_catchCountryCode.title                                          = Catch country
 gs1_gs1Model.property.gs1_catchMethodCode.title                                           = Catch method
 gs1_gs1Model.property.gs1_certificationCode.title                                         = Certification code
 gs1_gs1Model.property.gs1_cheeseMaturationPeriodDescription.description                   = A descriptive way to specify a date range as some cheeses are matured over a period of time, but not an exact period. For example 3 to 4 weeks, over 1 year etc. The term maturation is also known in other markets as Aged.
