Fix #26837 - [Feature] New gs1 fieds fixes

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -25,6 +25,7 @@ gs1_gs1Model.aspect.gs1_temperatureMeasurementAspect.title                      
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.description                      = The type of container used for the alcoholic beverage.
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.title                            = Alcohol beverage containers
 gs1_gs1Model.association.gs1_catchCountryCode.title                                       = Catch country
+gs1_gs1Model.association.gs1_contact.title                                             	  = Contact
 gs1_gs1Model.association.gs1_cplProduct.title                                             = Product
 gs1_gs1Model.association.gs1_dutyFeeTaxCountry.description                                = The country that a duty, fee or tax may be applicable to for a trade item.
 gs1_gs1Model.association.gs1_dutyFeeTaxCountry.title                                      = Country
