--- a/becpg-plm/becpg-plm-core/pom.xml
+++ b/becpg-plm/becpg-plm-core/pom.xml
@@ -6,7 +6,7 @@
 	    <version>23.2.2</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>23.2.2.51</version>
+	<version>23.2.2.52-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-core</artifactId>
 	<packaging>jar</packaging>
@@ -171,6 +171,6 @@
 
 
   <scm>
-    <tag>23.2.2.51</tag>
+    <tag>23.2.2.49</tag>
   </scm>
 </project>
