--- a/becpg-share/pom.xml
+++ b/becpg-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.1</version>
 		<relativePath>../</relativePath>
 	</parent>
- <version>23.4.1.14</version>
+ <version>23.4.1.15-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-share</artifactId>
 	<packaging>jar</packaging>
@@ -78,6 +78,6 @@
 	</build>
 
   <scm>
-    <tag>23.4.1.14</tag>
+    <tag>23.4.1.11</tag>
   </scm>
 </project>
