Fix #24234 - [Feature] Add survey view

--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel.properties
@@ -22,6 +22,7 @@ survey_surveymodel.association.survey_advSearchSurveyQuestion9.title  = Question
 survey_surveymodel.association.survey_fsLinkedCharactRefs.title       = Related characteristics
 survey_surveymodel.association.survey_fsLinkedHierarchy.title         = Related families
 survey_surveymodel.association.survey_nextQuestion.title              = Next question
+survey_surveymodel.association.survey_scoreCriterion.title            = Criterion
 survey_surveymodel.association.survey_slChoices.title                 = Selected choices
 survey_surveymodel.association.survey_slQuestion.title                = Question
 survey_surveymodel.property.survey_fsLinkedTypes.title                = Entity types
@@ -38,7 +39,6 @@ survey_surveymodel.property.survey_questionUrl.title                  = Url
 survey_surveymodel.property.survey_responseCommentLabel.title         = Comment label
 survey_surveymodel.property.survey_responseCommentType.title          = Comment type
 survey_surveymodel.property.survey_responseType.title                 = Response type
-survey_surveymodel.property.survey_scoreCriterion.title               = Criterion
 survey_surveymodel.property.survey_slComment.title                    = Comment
 survey_surveymodel.property.survey_slResponse.title                   = Other response
 survey_surveymodel.type.survey_surveyList.description                 = Add survey to entity
