--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get.properties
@@ -26,6 +26,7 @@ button.entity-reports-parameters.description = Edit reports parameters
 button.entity-view-details                   = View details
 button.entity-view-details.description       = View details
 button.entity-view-documents                 = View documents
+button.toggle-survey.description        = Toggle survey view
 button.entity-view-documents.description     = View documents
 button.formulate                             = Formulate
 button.formulate-decernis.description        = Calculate the characteristics of the product according to the components used, as well as regulatory compliance
