--- a/becpg-share/pom.xml
+++ b/becpg-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.2</version>
 		<relativePath>../</relativePath>
 	</parent>
- <version>23.4.2.0-SNAPSHOT</version>
+    <version>23.4.2.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-share</artifactId>
 	<packaging>jar</packaging>
@@ -66,6 +66,10 @@
 		    <version>2.0.0</version>
 		    <scope>provided</scope>
 		</dependency>
+	   <dependency>
+          <groupId>org.apache.httpcomponents.client5</groupId>
+          <artifactId>httpclient5</artifactId>
+      </dependency>	
 	 
 	</dependencies>
 	<build>
