--- a/becpg-integration-runner/pom.xml
+++ b/becpg-integration-runner/pom.xml
@@ -13,7 +13,7 @@
 		<version>23.4.1</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.4.1.17</version>
+    <version>23.4.1.18-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>fr.becpg</groupId>
@@ -453,6 +453,6 @@
 	</profiles>
 
   <scm>
-    <tag>23.4.1.17</tag>
+    <tag>23.4.1.11</tag>
   </scm>
 </project>
