Fix #27823 - [Bug] Fix translations in project-details

--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/project-details/project-details.get.properties
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/project-details/project-details.get.properties
@@ -1,4 +1,3 @@
-
 projectDetails.nextMilestoneTask.noTaskStartDate = The task start date is missing
 
 projectdetails.comments                       = Comments
@@ -9,34 +8,34 @@ projectdetails.header.showstatus              = Show my status
 projectdetails.header.status                  = Project status
 projectdetails.legend.acitivityNumber         = Activity number
 projectdetails.legend.completionDate          = End date
-projectdetails.legend.completionwork          = Completed work
-projectdetails.legend.inprogresswork          = Work in progress
-projectdetails.legend.overdue                 = Overdue work
-projectdetails.legend.passeddays              = Past days
-projectdetails.legend.realised                = Completed
-projectdetails.legend.remainingdays           = Remaining days
+projectdetails.legend.completionwork          = completed work
+projectdetails.legend.inprogresswork          = work in progress
+projectdetails.legend.overdue                 = overdue work
+projectdetails.legend.passeddays              = past days
+projectdetails.legend.realised                = completed
+projectdetails.legend.remainingdays           = remaining days
 projectdetails.legend.startday                = Start date
 projectdetails.milestones.nextmilestones      = Next milestones
 projectdetails.noMilestones                   = No upcoming milestones
 projectdetails.noduedate                      = The end date is not set
 projectdetails.nosatartdate                   = The project start date is missing
-projectdetails.progressstatement.milestones   = Milestones
+projectdetails.progressstatement.milestones   = milestones
 projectdetails.progressstatement.notasks      = No tasks planned
-projectdetails.progressstatement.tasks        = Tasks
+projectdetails.progressstatement.tasks        = tasks
 projectdetails.progressstatement.title        = Project progress statement
 projectdetails.project.state.Cancelled        = Cancelled
 projectdetails.project.state.Completed        = Completed
 projectdetails.project.state.InProgress       = In progress
 projectdetails.project.state.OnHold           = On hold
 projectdetails.project.state.Planned          = Planned
-projectdetails.projectevolution.dayslate      = Days late
+projectdetails.projectevolution.dayslate      = days late
 projectdetails.projectevolution.dueDate       = Due date
-projectdetails.projectevolution.remainingDays = Remaining days
+projectdetails.projectevolution.remainingDays = remaining days
 projectdetails.projectevolution.text1         = The project is
 projectdetails.projectevolution.title         = Project evolution
 projectdetails.start                          = Start
 projectdetails.tasklist.allTasks              = All tasks
 projectdetails.tasklist.comming               = Upcoming
-projectdetails.tasklist.myTasks               = My tasks
-projectdetails.tasklist.overdue               = Overdue
+projectdetails.tasklist.myTasks               = my tasks
+projectdetails.tasklist.overdue               = overdue
 projectdetails.userprogressstatement          = My progress
