Fix #23404 - [Feature] Create documentType

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
@@ -89,10 +89,11 @@ data.list.costList                            = Costs
 data.list.customsCode                         = Customs Codes
 data.list.datacarriertypecode                 = Types of barcode
 data.list.deliverableList                     = Deliverables
-data.list.dutyfeetaxagencycodes				  = Tax agencies
-data.list.dutyfeetaxcategorycodes			  = Tax categories
+data.list.documenttype                        = Document types
+data.list.dutyfeetaxagencycodes               = Tax agencies
+data.list.dutyfeetaxcategorycodes             = Tax categories
 data.list.dutyfeetaxes                        = Taxes
-data.list.dutyfeetaxtypecodes				  = Tax types
+data.list.dutyfeetaxtypecodes                 = Tax types
 data.list.dynamicCharactList                  = Calculated characteristics
 data.list.eco                                 = Change orders
 data.list.ecoreports                          = ECO reports
