--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get.properties
@@ -67,6 +67,7 @@ data.list.costList                            = Costs
 data.list.customsCode                         = Customs Codes
 data.list.datacarriertypecode                 = Types of barcode
 data.list.deliverableList                     = Deliverables
+data.list.documentType                        = Document types
 data.list.dutyFeeTax                          = Taxes
 data.list.dynamicCharactList                  = Calculated characteristics
 data.list.eco                                 = Change orders
