--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
@@ -37,10 +37,11 @@ path.controlunits                        = Control units
 path.costs                               = Costs
 path.customscodes                        = Customs Codes
 path.datacarriertypecode                 = Types of barcode
-path.dutyfeetaxagencycodes				 = Tax agencies
-path.dutyfeetaxcategorycodes			 = Tax categories
+path.documenttype                        = Document types
+path.dutyfeetaxagencycodes               = Tax agencies
+path.dutyfeetaxcategorycodes             = Tax categories
 path.dutyfeetaxes                        = Taxes
-path.dutyfeetaxtypecodes				 = Tax types
+path.dutyfeetaxtypecodes                 = Tax types
 path.eco                                 = Change orders
 path.ecoreports                          = ECO reports
 path.exchange                            = Exchange
