--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -34,15 +34,17 @@ basket.add.label  = Basket
 basket.add.tip    = Add
 basket.remove.tip = Remove
 
-becpg.forms.help.notificationFrequency = For Daily notify set to Day. \nFor Weekly notify set to Week. \nFor Monthly notify set to Month.\nFor Yearly notify set to Year. \n
-becpg.forms.help.notificationTimeType  = # X days before date =>  \n[MIN , (NOW-x)].  \n\n# X days after date =>  \n[(NOW+X) , MAX].  \n\n# From X days =>  \n[(NOW-X) , NOW].  \n\n# In less than X days =>  \n[NOW , (NOW+X)].  \n\n# X days to date: \ndate field equals to (NOW+X). \n\n# X is the integer declared in X days field.
-becpg.forms.help.nrConditions          = Add fts query for more adequate filtering (@cm\\:name:"product name").
-becpg.forms.set.audit.label            = Audit
-becpg.forms.set.branch.label           = Version
-becpg.forms.set.category.label         = Categories
-becpg.forms.set.designation.label      = Designation
-becpg.forms.set.search.label           = Search
-becpg.forms.set.template.label         = Template
+becpg.forms.help.notificationFrequency             = For Daily notify set to Day. \nFor Weekly notify set to Week. \nFor Monthly notify set to Month.\nFor Yearly notify set to Year. \n
+becpg.forms.help.notificationTimeType              = # X days before date =>  \n[MIN , (NOW-x)].  \n\n# X days after date =>  \n[(NOW+X) , MAX].  \n\n# From X days =>  \n[(NOW-X) , NOW].  \n\n# In less than X days =>  \n[NOW , (NOW+X)].  \n\n# X days to date: \ndate field equals to (NOW+X). \n\n# X is the integer declared in X days field.
+becpg.forms.help.nrConditions                      = Add fts query for more adequate filtering (@cm\\:name:"product name").
+becpg.forms.set.audit.label                        = Audit
+becpg.forms.set.branch.label                       = Version
+becpg.forms.set.category.label                     = Categories
+becpg.forms.set.designation.label                  = Designation
+becpg.forms.set.document-type-autogeneration.label = Autogeneration
+becpg.forms.set.document-type.label                = Document type
+becpg.forms.set.search.label                       = Search
+becpg.forms.set.template.label                     = Template
 
 button.bulkEdit                 = Bulk edition
 button.columns-conf             = &nbsp;
@@ -115,15 +117,15 @@ linkshare.action.google-plus.label = Share using Google+
 linkshare.action.twitter.label     = Share using Twitter
 linkshare.action.twitter.message   = File {1} shared from beCPG
 
-menu.basket.empty                  = Empty basket
-menu.basket.show                   = Show basket
-menu.create-content.entity         = Entity...
-menu.create-content.externalLink   = External link...
-menu.selected-items.assign-process = Start process...
-menu.selected-items.basket         = Add to basket
-menu.selected-items.lock           = Lock item(s)
-menu.selected-items.quick-share    = Share documents
-menu.selected-items.unlock         = Unlock item(s)
+menu.basket.empty                           = Empty basket
+menu.basket.show                            = Show basket
+menu.create-content.entity                  = Entity...
+menu.create-content.externalLink            = External link...
+menu.selected-items.assign-process          = Start process...
+menu.selected-items.basket                  = Add to basket
+menu.selected-items.lock                    = Lock item(s)
+menu.selected-items.quick-share             = Share documents
+menu.selected-items.unlock                  = Unlock item(s)
 menu.selected-items.update-supplier-account = Update supplier account
 
 message.annotation-cancel.failure             = Could not cancel annotations
