Fix #23404 - [Feature] Create document aspect

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -164,6 +164,7 @@ becpg.forms.set.conditioning.label                             = Packaging
 becpg.forms.set.consumer.label                                 = Consumer information
 becpg.forms.set.costs-criteria.label                           = Criteria on costs
 becpg.forms.set.dates.label                                    = Dates
+becpg.forms.set.documentType.label                             = Document type
 becpg.forms.set.documents.label                                = Documents
 becpg.forms.set.eco.score.label                                = Ecological score
 becpg.forms.set.effectivity.label                              = Effectivity
