--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -43,6 +43,7 @@ becpg.forms.set.category.label                     = Categories
 becpg.forms.set.designation.label                  = Designation
 becpg.forms.set.document-type-autogeneration.label = Autogeneration
 becpg.forms.set.document-type.label                = Document type
+becpg.forms.set.effectivity.label                  = Effectivity
 becpg.forms.set.search.label                       = Search
 becpg.forms.set.template.label                     = Template
 
